Finally fixes comment form overflow crap.

--- a/src/scss/components/_comments.scss
+++ b/src/scss/components/_comments.scss
@@ -57,6 +57,11 @@
   display: flex;
   flex-flow: row wrap;
   gap: 5px;
+  max-inline-size: 50ch;
+
+  a {
+    display: block;
+  }
 }
 
 .required-field-message {
