--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -15,7 +15,7 @@ textarea {
   border: 1px solid var(--gray-dark);
   display: block;
   font-size: var(--font-size-small);
-  max-inline-size: 50ch;
+  width: calc(min(100%, 50ch));
   padding: calc(var(--spacer-small) / 2);
 }
 
