--- a/src/scss/components/_notice.scss
+++ b/src/scss/components/_notice.scss
@@ -5,5 +5,5 @@
 	font-size: var(--font-size-small);
 	padding: calc(var(--spacer-small) / 2);
   // https://github.com/sass/node-sass/issues/2815#issuecomment-575926329
-	width: calc(max(80ch, 100%));
+	max-inline-size: 50ch;
 }
